27_matrix_input/grade.txt
Grading at Sat May 30 03:03:04 UTC 2020
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:53:13: error: passing argument 1 of ‘fprintf’ from incompatible pointer type [-Werror=incompatible-pointer-types]
     fprintf("invalid input\n");
             ^
In file included from rotateMatrix.c:1:0:
/usr/include/stdio.h:356:12: note: expected ‘FILE * restrict {aka struct _IO_FILE * restrict}’ but argument is of type ‘char *’
 extern int fprintf (FILE *__restrict __stream,
            ^
rotateMatrix.c:53:5: error: too few arguments to function ‘fprintf’
     fprintf("invalid input\n");
     ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
